シンプルバージョンを追加